--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,12 @@ body > div {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     grid-area: main;
     padding: 2rem;
+
 }
 
 aside {
@@ -59,4 +63,16 @@ aside {
     padding: 0 1.5rem;
     font-size: 1.6rem;
     line-height: 3rem;
+}
+
+.page-title {
+    font-size: 3rem;
+}
+.page-description {
+    font-size: 1.4rem;
+}
+.error {
+    padding: 2rem;
+    border: 0.2rem dashed red;
+    border-radius: 0.4rem;
 }
