--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ main {
     gap: 2rem;
     grid-area: main;
     padding: 2rem;
-
 }
 
 aside {
@@ -68,9 +67,14 @@ aside {
 .page-title {
     font-size: 3rem;
 }
+.page-title button {
+    font-size: 0.7em;
+    padding: 0.1em 0.3em;
+}
 .page-description {
     font-size: 1.4rem;
 }
+
 .error {
     padding: 2rem;
     border: 0.2rem dashed red;
