--- a/src/components/students/Students.module.css
+++ b/src/components/students/Students.module.css
@@ -1,7 +1,7 @@
 .studentList {
-display: grid;
-grid-template-columns: 1fr;
-gap: 2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
 }
 
 .student {
@@ -11,42 +11,40 @@ gap: 2rem;
 }
 
 .name {
+    display: flex;
+    align-items: center;
     font-size: 2rem;
 }
-
 .status {
     padding: 0.5rem 1.5rem;
+    font-size: 1.3rem;
     background-color: #ddd;
     border-radius: 0.2rem;
-    font-size: 1.3rem;
 }
-
 .status.married {
-   background-color: greenyellow;
+    background-color: greenyellow;
 }
-
 .status.notMarried {
     background-color: pink;
- }
-
+}
 .info {
     font-size: 1.3rem;
 }
 
-@media(min-width: 800px) {
+@media (min-width: 800px) {
     .studentList {
         grid-template-columns: 1fr 1fr;
-        }
+    }
 }
 
-@media(min-width: 1100px) {
+@media (min-width: 1100px) {
     .studentList {
         grid-template-columns: 1fr 1fr 1fr;
-        }
+    }
 }
 
-@media(min-width: 1400px) {
+@media (min-width: 1400px) {
     .studentList {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        }
+    }
 }
